--- a/resume.qmd
+++ b/resume.qmd
@@ -1,89 +1,99 @@
 ---
 layout: cv
-title: Isaac Newtons's CV
+title: Ryland Bangerter's CV
 ---
-# Isaac Newton
-Physicist, Mathematician, Cambridge professor.
+# Ryland Bangerter
+Computer Scientist, BYUI Student, Data Science
 
 <div id="webaddress">
-<a href="isaac@applesdofall.org">isaac@applesdofall.org</a>
-| <a href="http://en.wikipedia.org/wiki/Isaac_Newton">My wikipedia page</a>
+<a href="ban24039@byui.edu">ban24039@byui.edu</a>
+| <a href="https://www.linkedin.com/in/rylandbangerter/">My LinkedIn page</a>
 </div>
 
 
 ## Currently
 
-Standing on the shoulders of giants
+Working on getting my bachelor's degree in Computer Science
 
 ### Specialized in
 
-Laws of motion, gravitation, minting coins, disliking [Robert Hooke](http://en.wikipedia.org/wiki/Robert_Hooke)
+Computer science, tennis, web development, data analysis
 
 
 ### Research interests
 
-Cooling, power series, optics, alchemy, planetary motions, apples.
+ Human-Computer Interaction (HCI), Machine Learning & Applied AI, Web Development, Data Visualization & Analysis
 
 
 ## Education
 
-`1654-1660`
-__The King's School, Grantham.__
+`2020-2024`
+__Ridgevue High School__
 
-`June 1661 - now`
-__Trinity College, Cambridge__
+`August 2024 - December 2024`
+__College of Western Idaho__
 
-- Sizar
-
-`1667 - death`
-__Trinity College, Cambridge__
-
-- Fellow
-
+`January 2025 - Present`
+__Brigham Young University Idaho__
 
 
 ## Awards
 
-`2012`
-President, *Royal Society*, London, UK
+`2024-2025`
+Remarkable Futures Scholarship from Chick-fil-A for academic and leadership excellence
 
-Associate, *French Academy of Science*, Paris, France
+`2024`
+Ranked in the Top 10 in Statewide Tennis as a state-qualified athlete.
 
 
 
-## Publications
+## Projects
 
 <!-- A list is also available [online](http://scholar.google.co.uk/citations?user=LTOTl0YAAAAJ) -->
 
-### Journals
+`2024`
+__Softball Player Swing Scorer__
+ - Developed a full-stack application to process and display user softball statistics in an easy-to-read table format.
+ - Conducted team meetings and utilized SQL and .NET tools for project success.
+ - Strengthened teamwork and software development skills in a remote working environment.
 
-`1669`
-Newton Sir I, De analysi per æquationes numero terminorum infinitas. 
+`2024`
+__Senior High School Project: Food Canning__
+ - Gained practical knowledge in food canning and researched its history.
+ - Delivered an engaging presentation to a panel of judges, showcasing the benefits and importance of canning.
 
-`1669`
-Lectiones opticæ.
-
-etc. etc. etc.
-
-### Patents
-
-`2012`
-Infinitesimal calculus for solutions to physics problems, [SMBC](http://www.techdirt.com/articles/20121011/09312820678/if-patents-had-been-around-time-newton.shtml) patent 001
 
 
 ## Occupation
 
-`1600`
-__Royal Mint__, London
+`June 2022 – Present`
+Team Lead- Chick-fil-A | Nampa, ID
+ - Trained 10+ team members in customer service, operational processes, and food preparation standards.
+ - Directed a team of 10 in nightly cleaning and operational tasks, ensuring adherence to quality standards.
+ - Coordinated with supervisors to streamline workflows and achieve shift objectives.
 
-- Warden
-- Minted coins
 
-`1600`
-__Lucasian professor of Mathematics__, Cambridge University
+`January 2025 - April 2025`
+Early Morning Custodian- Brigham Young University Idaho | Rexburg, ID
+ - Cleaned and maintained offices, hallways, and restrooms to ensure a sanitary and organized environment.
+ - Followed a structured cleaning routine to complete tasks efficiently before the start of the school day.
+ - Developed strong time management skills by balancing work responsibilities with other commitments.
 
+
+`August 2023 - May 2024`
+Social Media Manager- Ridgevue High School | Nampa, ID
+ - Managed and maintained Instagram and X accounts, ensuring consistent branding and audience engagement.
+ - Designed eye-catching graphics and promotional materials using Canva to enhance social media presence.
+ - Developed and scheduled posts, interacted with followers, and implemented strategies to increase reach and engagement.
+
+
+`October 2021 – January 2022`
+Assembly Line Worker- Franklin Sensors | Meridian, ID
+ - Assembled and inspected 100+ stud finders daily, maintaining a 98% accuracy rate.
+ - Conducted quality control checks on finished products to ensure conformance with specifications.
+ - Improved production efficiency by identifying and addressing workflow bottlenecks.
 
 
 <!-- ### Footer
 
-Last updated: May 2013 -->
+Last updated: July 2025-->
