--- a/resume.qmd
+++ b/resume.qmd
@@ -27,22 +27,22 @@ Computer science, tennis, web development, data analysis
 
 ## Education
 
-`2020-2024`
+`2020-2024`  
 __Ridgevue High School__
 
-`August 2024 - December 2024`
+`August 2024 - December 2024`  
 __College of Western Idaho__
 
-`January 2025 - Present`
+`January 2025 - Present`  
 __Brigham Young University Idaho__
 
 
 ## Awards
 
-`2024-2025`
+`2024-2025`  
 Remarkable Futures Scholarship from Chick-fil-A for academic and leadership excellence
 
-`2024`
+`May 2024`  
 Ranked in the Top 10 in Statewide Tennis as a state-qualified athlete.
 
 
@@ -51,47 +51,47 @@ Ranked in the Top 10 in Statewide Tennis as a state-qualified athlete.
 
 <!-- A list is also available [online](http://scholar.google.co.uk/citations?user=LTOTl0YAAAAJ) -->
 
-`2024`
-__Softball Player Swing Scorer__
-- Developed a full-stack application to process and display user softball statistics in an easy-to-read table format.
-- Conducted team meetings and utilized SQL and .NET tools for project success.
-- Strengthened teamwork and software development skills in a remote working environment.
+`2024`  
+__Softball Player Swing Scorer__  
+- Developed a full-stack application to process and display user softball statistics in an easy-to-read table format.  
+- Conducted team meetings and utilized SQL and .NET tools for project success.  
+- Strengthened teamwork and software development skills in a remote working environment.  
 
-`2024`
-__Senior High School Project: Food Canning__
-- Gained practical knowledge in food canning and researched its history.
-- Delivered an engaging presentation to a panel of judges, showcasing the benefits and importance of canning.
+`2024`  
+__Senior High School Project: Food Canning__  
+- Gained practical knowledge in food canning and researched its history.  
+- Delivered an engaging presentation to a panel of judges, showcasing the benefits and importance of canning.  
 
 
 
 ## Occupation
 
-`June 2022 – Present`
-Team Lead- Chick-fil-A | Nampa, ID
-- Trained 10+ team members in customer service, operational processes, and food preparation standards.
-- Directed a team of 10 in nightly cleaning and operational tasks, ensuring adherence to quality standards.
-- Coordinated with supervisors to streamline workflows and achieve shift objectives.
+`June 2022 – Present`  
+Team Lead- Chick-fil-A | Nampa, ID  
+- Trained 10+ team members in customer service, operational processes, and food preparation standards.  
+- Directed a team of 10 in nightly cleaning and operational tasks, ensuring adherence to quality standards.  
+- Coordinated with supervisors to streamline workflows and achieve shift objectives.  
 
 
-`January 2025 - April 2025`
-Early Morning Custodian- Brigham Young University Idaho | Rexburg, ID
-- Cleaned and maintained offices, hallways, and restrooms to ensure a sanitary and organized environment.
-- Followed a structured cleaning routine to complete tasks efficiently before the start of the school day.
-- Developed strong time management skills by balancing work responsibilities with other commitments.
+`January 2025 - April 2025`  
+Early Morning Custodian- Brigham Young University Idaho | Rexburg, ID  
+- Cleaned and maintained offices, hallways, and restrooms to ensure a sanitary and organized environment.  
+- Followed a structured cleaning routine to complete tasks efficiently before the start of the school day.  
+- Developed strong time management skills by balancing work responsibilities with other commitments.  
 
 
-`August 2023 - May 2024`
-Social Media Manager- Ridgevue High School | Nampa, ID
-- Managed and maintained Instagram and X accounts, ensuring consistent branding and audience engagement.
-- Designed eye-catching graphics and promotional materials using Canva to enhance social media presence.
-- Developed and scheduled posts, interacted with followers, and implemented strategies to increase reach and engagement.
+`August 2023 - May 2024`  
+Social Media Manager- Ridgevue High School | Nampa, ID  
+- Managed and maintained Instagram and X accounts, ensuring consistent branding and audience engagement.  
+- Designed eye-catching graphics and promotional materials using Canva to enhance social media presence.  
+- Developed and scheduled posts, interacted with followers, and implemented strategies to increase reach and engagement.  
 
 
-`October 2021 – January 2022`
-Assembly Line Worker- Franklin Sensors | Meridian, ID
-- Assembled and inspected 100+ stud finders daily, maintaining a 98% accuracy rate.
-- Conducted quality control checks on finished products to ensure conformance with specifications.
-- Improved production efficiency by identifying and addressing workflow bottlenecks.
+`October 2021 – January 2022`  
+Assembly Line Worker- Franklin Sensors | Meridian, ID  
+- Assembled and inspected 100+ stud finders daily, maintaining a 98% accuracy rate.  
+- Conducted quality control checks on finished products to ensure conformance with specifications.  
+- Improved production efficiency by identifying and addressing workflow bottlenecks.  
 
 
 <!-- ### Footer
